--- a/superpecas/src/main/resources/application.properties
+++ b/superpecas/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # MySQL Configuration
 
-spring.datasource.url=jdbc:mysql://localhost:3306/SuperPecas?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/superpecas
 
-spring.datasource.username=root
+spring.datasource.username=postgres
 
-spring.datasource.password=!@123456
+spring.datasource.password=master
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
