--- a/superpecas/src/main/resources/application.properties
+++ b/superpecas/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-# MySQL Configuration
-
+# DB Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/superpecas
 
 spring.datasource.username=postgres
 
-spring.datasource.password=master
+spring.datasource.password=postgres
 
+
+#JWT
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
 # JPA/Hibernate properties
-
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.show-sql=true
@@ -18,3 +18,5 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+##liquibase
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
